--- a/configs/x86_64.config
+++ b/configs/x86_64.config
@@ -9,6 +9,8 @@ CONFIG_ARIA2_METALINK=y
 CONFIG_ARIA2_OPENSSL=y
 CONFIG_ARIA2_SFTP=y
 CONFIG_ARIA2_WEBSOCKET=y
+# CONFIG_GRUB_EFI_IMAGES is not set
+CONFIG_GRUB_IMAGES=y
 CONFIG_KERNEL_BUILD_DOMAIN="OpenWrt"
 CONFIG_KERNEL_BUILD_USER="LoogCP"
 CONFIG_KSMBD_SMB_INSECURE_SERVER=y
@@ -207,7 +209,10 @@ CONFIG_SQLITE3_JSON1=y
 CONFIG_SQLITE3_RTREE=y
 CONFIG_TARGET_KERNEL_PARTSIZE=100
 CONFIG_TARGET_ROOTFS_PARTSIZE=900
+# CONFIG_VMDK_IMAGES is not set
 CONFIG_boost-compile-visibility-hidden=y
 CONFIG_boost-runtime-shared=y
 CONFIG_boost-static-and-shared-libs=y
 CONFIG_boost-variant-release=y
+CONFIG_PACKAGE_grub2-bios-setup=y
+CONFIG_PACKAGE_grub2-efi=y
