--- a/.github/workflows/immortalwrt-23.05.yml
+++ b/.github/workflows/immortalwrt-23.05.yml
@@ -1,20 +1,20 @@
-name: X86_64 OpenWrt
+name: ImmortalWrt
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: 0 19 1 * *
+    - cron: 0 19 * * 1
 
 env:
-  REPO_URL: https://github.com/coolsnowwolf/lede
-  REPO_BRANCH: master
-  CONFIG_FILE: configs/x86_64.config
+  REPO_URL: https://github.com/immortalwrt/immortalwrt.git
+  REPO_BRANCH: openwrt-23.05
+  CONFIG_FILE: configs/immortalwrt-23.05.config
   DIY_SCRIPT: diy-script.sh
   CLASH_KERNEL: amd64
   CACHE_TOOLCHAIN: true
   UPLOAD_BIN_DIR: false
   FIRMWARE_RELEASE: true
-  FIRMWARE_TAG: X86_64
+  FIRMWARE_TAG: ImmortalWrt-23.05
   TZ: Asia/Shanghai
 
 jobs:
