--- a/.github/workflows/immortalwrt-21.02.yml
+++ b/.github/workflows/immortalwrt-21.02.yml
@@ -9,7 +9,7 @@ env:
   REPO_URL: https://github.com/immortalwrt/immortalwrt.git
   REPO_BRANCH: openwrt-21.02
   CONFIG_FILE: configs/immortalwrt-21.02.config
-  DIY_SCRIPT: diy-script.sh
+  DIY_SCRIPT: diy-immortalwrt.sh
   CLASH_KERNEL: amd64
   CACHE_TOOLCHAIN: true
   UPLOAD_BIN_DIR: false
