--- a/.github/workflows/immortalwrt-23.05.yml
+++ b/.github/workflows/immortalwrt-23.05.yml
@@ -9,7 +9,7 @@ env:
   REPO_URL: https://github.com/immortalwrt/immortalwrt.git
   REPO_BRANCH: openwrt-23.05
   CONFIG_FILE: configs/immortalwrt-23.05.config
-  DIY_SCRIPT: diy-immortalwrt.sh
+  DIY_SCRIPT: diy-iw.sh
   CLASH_KERNEL: amd64
   CACHE_TOOLCHAIN: true
   UPLOAD_BIN_DIR: false
