--- a/configs/immortalwrt-21.02.config
+++ b/configs/immortalwrt-21.02.config
@@ -828,6 +828,7 @@ CONFIG_WOLFSSL_HAS_OPENVPN=y
 CONFIG_WOLFSSL_ALT_NAMES=y
 CONFIG_PACKAGE_alsa-ucm-conf=y
 CONFIG_PACKAGE_alsa-lib=y
+CONFIG_PACKAGE_bind-libs=y
 CONFIG_PACKAGE_boost=y
 CONFIG_boost-compile-visibility-hidden=y
 CONFIG_boost-static-and-shared-libs=y
@@ -916,6 +917,7 @@ CONFIG_PACKAGE_libuclient=y
 CONFIG_PACKAGE_libudns=y
 CONFIG_PACKAGE_libustream-openssl=y
 CONFIG_PACKAGE_libuuid=y
+CONFIG_PACKAGE_libuv=y
 CONFIG_PACKAGE_libvorbis=y
 CONFIG_PACKAGE_rpcd-mod-luci=y
 CONFIG_PACKAGE_rpcd-mod-rrdns=y
@@ -1097,7 +1099,6 @@ CONFIG_PACKAGE_uhttpd=y
 CONFIG_PACKAGE_uhttpd-mod-ubus=y
 CONFIG_PACKAGE_v2ray-plugin=y
 CONFIG_PACKAGE_6in4=y
-CONFIG_PACKAGE_adguardhome=y
 CONFIG_PACKAGE_ethtool=y
 CONFIG_PACKAGE_hysteria=y
 CONFIG_PACKAGE_ipset=y
