--- a/configs/immortalwrt-21.02.config
+++ b/configs/immortalwrt-21.02.config
@@ -108,6 +108,10 @@ CONFIG_x86_64=y
 CONFIG_ARCH="x86_64"
 CONFIG_EXTERNAL_CPIO=""
 CONFIG_TARGET_ROOTFS_TARGZ=y
+CONFIG_TARGET_ROOTFS_EXT4FS=y
+CONFIG_TARGET_EXT4_RESERVED_PCT=0
+CONFIG_TARGET_EXT4_BLOCKSIZE_4K=y
+CONFIG_TARGET_EXT4_BLOCKSIZE=4096
 CONFIG_TARGET_ROOTFS_SQUASHFS=y
 CONFIG_TARGET_SQUASHFS_BLOCK_SIZE=256
 CONFIG_TARGET_UBIFS_FREE_SPACE_FIXUP=y
@@ -573,7 +577,6 @@ CONFIG_PACKAGE_netifd=y
 CONFIG_PACKAGE_openwrt-keyring=y
 CONFIG_PACKAGE_opkg=y
 CONFIG_PACKAGE_procd=y
-CONFIG_PACKAGE_qos-scripts=y
 CONFIG_PACKAGE_resolveip=y
 CONFIG_PACKAGE_rpcd=y
 CONFIG_PACKAGE_rpcd-mod-file=y
@@ -586,13 +589,18 @@ CONFIG_PACKAGE_urandom-seed=y
 CONFIG_PACKAGE_urngd=y
 CONFIG_PACKAGE_usign=y
 CONFIG_ZABBIX_POSTGRESQL=y
+CONFIG_PACKAGE_htop=y
+CONFIG_HTOP_LMSENSORS=y
 CONFIG_PACKAGE_grub2=y
 CONFIG_PACKAGE_grub2-efi=y
+CONFIG_PACKAGE_kmod-oaf=y
 CONFIG_PACKAGE_autocore-x86=y
 CONFIG_PACKAGE_automount=y
 CONFIG_PACKAGE_ipv6helper=y
 CONFIG_PACKAGE_libiwinfo-data=y
 CONFIG_PACKAGE_bnx2-firmware=y
+CONFIG_PACKAGE_kmod-dax=y
+CONFIG_PACKAGE_kmod-dm=y
 CONFIG_PACKAGE_kmod-scsi-core=y
 CONFIG_PACKAGE_kmod-crypto-acompress=y
 CONFIG_PACKAGE_kmod-crypto-aead=y
@@ -632,8 +640,10 @@ CONFIG_PACKAGE_kmod-fs-ext4=y
 CONFIG_PACKAGE_kmod-fs-f2fs=y
 CONFIG_PACKAGE_kmod-fs-ksmbd=y
 CONFIG_KSMBD_SMB_INSECURE_SERVER=y
+CONFIG_PACKAGE_kmod-fs-nfs=y
 CONFIG_PACKAGE_kmod-fs-nfs-common=y
 CONFIG_PACKAGE_kmod-fs-nfs-common-rpcsec=y
+CONFIG_PACKAGE_kmod-fs-nfs-v4=y
 CONFIG_PACKAGE_kmod-fs-nfsd=y
 CONFIG_PACKAGE_kmod-fs-ntfs3=y
 CONFIG_PACKAGE_kmod-fs-vfat=y
@@ -662,10 +672,8 @@ CONFIG_PACKAGE_kmod-nls-iso8859-1=y
 CONFIG_PACKAGE_kmod-nls-utf8=y
 CONFIG_PACKAGE_kmod-ip6tables=y
 CONFIG_PACKAGE_kmod-ipt-conntrack=y
-CONFIG_PACKAGE_kmod-ipt-conntrack-extra=y
 CONFIG_PACKAGE_kmod-ipt-core=y
 CONFIG_PACKAGE_kmod-ipt-fullconenat=y
-CONFIG_PACKAGE_kmod-ipt-ipopt=y
 CONFIG_PACKAGE_kmod-ipt-ipset=y
 CONFIG_PACKAGE_kmod-ipt-nat=y
 CONFIG_PACKAGE_kmod-ipt-nat6=y
@@ -690,7 +698,6 @@ CONFIG_PACKAGE_kmod-e1000=y
 CONFIG_PACKAGE_kmod-e1000e=y
 CONFIG_PACKAGE_kmod-forcedeth=y
 CONFIG_PACKAGE_kmod-i40e-vendor=y
-CONFIG_PACKAGE_kmod-ifb=y
 CONFIG_PACKAGE_kmod-igb-vendor=y
 CONFIG_PACKAGE_kmod-igbvf=y
 CONFIG_PACKAGE_kmod-igc=y
@@ -706,6 +713,8 @@ CONFIG_PACKAGE_kmod-r8168=y
 CONFIG_PACKAGE_kmod-tg3=y
 CONFIG_PACKAGE_kmod-tulip=y
 CONFIG_PACKAGE_kmod-vmxnet3=y
+CONFIG_PACKAGE_kmod-dnsresolver=y
+CONFIG_PACKAGE_kmod-fast-classifier=y
 CONFIG_PACKAGE_kmod-iptunnel=y
 CONFIG_PACKAGE_kmod-iptunnel4=y
 CONFIG_PACKAGE_kmod-mdio=y
@@ -713,10 +722,7 @@ CONFIG_PACKAGE_kmod-ppp=y
 CONFIG_PACKAGE_kmod-mppe=y
 CONFIG_PACKAGE_kmod-pppoe=y
 CONFIG_PACKAGE_kmod-pppox=y
-CONFIG_PACKAGE_kmod-sched-connmark=y
-CONFIG_PACKAGE_kmod-sched-core=y
 CONFIG_PACKAGE_kmod-shortcut-fe=y
-CONFIG_PACKAGE_kmod-shortcut-fe-cm=y
 CONFIG_PACKAGE_kmod-sit=y
 CONFIG_PACKAGE_kmod-slhc=y
 CONFIG_PACKAGE_kmod-tcp-bbr=y
@@ -828,7 +834,6 @@ CONFIG_WOLFSSL_HAS_OPENVPN=y
 CONFIG_WOLFSSL_ALT_NAMES=y
 CONFIG_PACKAGE_alsa-ucm-conf=y
 CONFIG_PACKAGE_alsa-lib=y
-CONFIG_PACKAGE_bind-libs=y
 CONFIG_PACKAGE_boost=y
 CONFIG_boost-compile-visibility-hidden=y
 CONFIG_boost-static-and-shared-libs=y
@@ -858,6 +863,7 @@ CONFIG_LIBCURL_TLS_SRP=y
 CONFIG_LIBCURL_THREADED_RESOLVER=y
 CONFIG_LIBCURL_UNIX_SOCKETS=y
 CONFIG_PACKAGE_libdb47=y
+CONFIG_PACKAGE_libdevmapper=y
 CONFIG_PACKAGE_libelf=y
 CONFIG_PACKAGE_libev=y
 CONFIG_PACKAGE_libevent2=y
@@ -876,6 +882,7 @@ CONFIG_PACKAGE_libid3tag=y
 CONFIG_PACKAGE_libiwinfo=y
 CONFIG_PACKAGE_libjpeg-turbo=y
 CONFIG_PACKAGE_libjson-c=y
+CONFIG_PACKAGE_libkeyutils=y
 CONFIG_PACKAGE_liblua=y
 CONFIG_PACKAGE_liblucihttp=y
 CONFIG_PACKAGE_liblucihttp-lua=y
@@ -908,6 +915,7 @@ CONFIG_LIBSODIUM_MINIMAL=y
 CONFIG_PACKAGE_libss=y
 CONFIG_PACKAGE_libssh2=y
 CONFIG_LIBSSH2_OPENSSL=y
+CONFIG_PACKAGE_libtirpc=y
 CONFIG_PACKAGE_libubox=y
 CONFIG_PACKAGE_libubus=y
 CONFIG_PACKAGE_libubus-lua=y
@@ -917,8 +925,8 @@ CONFIG_PACKAGE_libuclient=y
 CONFIG_PACKAGE_libudns=y
 CONFIG_PACKAGE_libustream-openssl=y
 CONFIG_PACKAGE_libuuid=y
-CONFIG_PACKAGE_libuv=y
 CONFIG_PACKAGE_libvorbis=y
+CONFIG_PACKAGE_libwrap=y
 CONFIG_PACKAGE_rpcd-mod-luci=y
 CONFIG_PACKAGE_rpcd-mod-rrdns=y
 CONFIG_PACKAGE_terminfo=y
@@ -933,22 +941,21 @@ CONFIG_PACKAGE_luci-mod-admin-full=y
 CONFIG_PACKAGE_luci-mod-network=y
 CONFIG_PACKAGE_luci-mod-status=y
 CONFIG_PACKAGE_luci-mod-system=y
-CONFIG_PACKAGE_luci-app-accesscontrol=y
-CONFIG_PACKAGE_luci-app-adguardhome=y
+CONFIG_PACKAGE_luci-app-adguardhome=m
+CONFIG_PACKAGE_luci-app-appfilter=y
 CONFIG_PACKAGE_luci-app-aria2=y
 CONFIG_PACKAGE_luci-app-cifs-mount=y
 CONFIG_PACKAGE_luci-app-design-config=y
 CONFIG_PACKAGE_luci-app-diskman=y
 CONFIG_PACKAGE_luci-app-diskman_INCLUDE_btrfs_progs=y
 CONFIG_PACKAGE_luci-app-diskman_INCLUDE_lsblk=y
-CONFIG_PACKAGE_luci-app-eqos=y
 CONFIG_PACKAGE_luci-app-filetransfer=y
 CONFIG_PACKAGE_luci-app-firewall=y
+CONFIG_PACKAGE_luci-app-frpc=y
 CONFIG_PACKAGE_luci-app-gowebdav=y
 CONFIG_PACKAGE_luci-app-ksmbd=y
 CONFIG_PACKAGE_luci-app-minidlna=y
-CONFIG_PACKAGE_luci-app-multi-frpc=y
-CONFIG_PACKAGE_luci-app-nlbwmon=y
+CONFIG_PACKAGE_luci-app-nfs=y
 CONFIG_PACKAGE_luci-app-onliner=y
 CONFIG_PACKAGE_luci-app-opkg=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Haproxy=y
@@ -960,9 +967,7 @@ CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_Plus=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
-CONFIG_PACKAGE_luci-app-qos=y
 CONFIG_PACKAGE_luci-app-rclone=y
-CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-webui=y
 CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-ng=y
 CONFIG_PACKAGE_luci-app-ssr-plus=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Rust_Client=y
@@ -974,12 +979,14 @@ CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_IPT2Socks=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_NaiveProxy=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Redsocks2=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Simple_Obfs=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_V2ray_Plugin=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Libev_Client=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Libev_Server=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Tuic-Client=y
 CONFIG_PACKAGE_luci-app-turboacc=y
-CONFIG_PACKAGE_TURBOACC_INCLUDE_SHORTCUT_FE_CM=y
+CONFIG_PACKAGE_TURBOACC_INCLUDE_FAST_CLASSIFIER=y
 CONFIG_PACKAGE_TURBOACC_INCLUDE_BBR_CCA=y
 CONFIG_PACKAGE_luci-app-upnp=y
 CONFIG_PACKAGE_luci-app-vssr_INCLUDE_ShadowsocksR_Libev_Server=y
@@ -987,9 +994,11 @@ CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Trojan=y
 CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Xray=y
 CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Xray_plugin=y
 CONFIG_PACKAGE_luci-app-zerotier=y
+CONFIG_PACKAGE_luci-theme-argon=y
 CONFIG_PACKAGE_luci-theme-bootstrap=y
 CONFIG_PACKAGE_luci-theme-design=y
 CONFIG_PACKAGE_luci-theme-edge=y
+CONFIG_PACKAGE_luci-theme-infinityfreedom=y
 CONFIG_PACKAGE_luci-theme-netgear=y
 CONFIG_PACKAGE_luci-proto-ipv6=y
 CONFIG_PACKAGE_luci-proto-ppp=y
@@ -1001,21 +1010,19 @@ CONFIG_PACKAGE_luci-lib-nixio=y
 CONFIG_PACKAGE_luci-lib-nixio_openssl=y
 CONFIG_PACKAGE_default-settings=y
 CONFIG_PACKAGE_default-settings-chn=y
-CONFIG_PACKAGE_luci-i18n-accesscontrol-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-appfilter-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-aria2-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-base-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-cifs-mount-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-design-config-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-diskman-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-eqos-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-filetransfer-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-firewall-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-gowebdav-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-ksmbd-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-minidlna-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-nlbwmon-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-nfs-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-opkg-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-qos-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-rclone-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-ssr-plus-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-turboacc-zh-cn=y
@@ -1034,7 +1041,6 @@ CONFIG_PACKAGE_youtube-dl=y
 CONFIG_PACKAGE_opentracker=y
 CONFIG_PACKAGE_opentracker6=y
 CONFIG_PACKAGE_rclone-ng=y
-CONFIG_PACKAGE_rclone-webui-react=y
 CONFIG_PACKAGE_ariang=y
 CONFIG_PACKAGE_aria2=y
 CONFIG_ARIA2_OPENSSL=y
@@ -1053,18 +1059,18 @@ CONFIG_PACKAGE_rsync=y
 CONFIG_PACKAGE_rsyncd=y
 CONFIG_PACKAGE_wget-ssl=y
 CONFIG_PACKAGE_ksmbd-server=y
-CONFIG_PACKAGE_ksmbd-utils=y
-CONFIG_KSMBD_UTILS_SHAREADD=y
+CONFIG_PACKAGE_nfs-kernel-server=y
+CONFIG_NFS_KERNEL_SERVER_V4=y
+CONFIG_PACKAGE_nfs-kernel-server-utils=y
 CONFIG_PACKAGE_sshfs=y
 CONFIG_PACKAGE_ip6tables=y
 CONFIG_PACKAGE_ip6tables-mod-nat=y
 CONFIG_PACKAGE_iptables=y
-CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
 CONFIG_PACKAGE_iptables-mod-fullconenat=y
-CONFIG_PACKAGE_iptables-mod-ipopt=y
 CONFIG_PACKAGE_iptables-mod-tproxy=y
 CONFIG_PACKAGE_miniupnpd=y
 CONFIG_PACKAGE_bind-dig=y
+CONFIG_PACKAGE_bind-nslookup=y
 CONFIG_PACKAGE_chinadns-ng=y
 CONFIG_PACKAGE_dns2socks=y
 CONFIG_PACKAGE_dns2tcp=y
@@ -1075,14 +1081,11 @@ CONFIG_PCAP_DNSPROXY_LISTENPORT=1053
 CONFIG_PACKAGE_wsdd2=y
 CONFIG_OPENLDAP_DEBUG=y
 CONFIG_PACKAGE_ip-full=y
-CONFIG_PACKAGE_tc-mod-iptables=y
-CONFIG_PACKAGE_tc-tiny=y
 CONFIG_PACKAGE_openssh-sftp-server=y
 CONFIG_PACKAGE_zerotier=y
 CONFIG_PACKAGE_git=y
 CONFIG_PACKAGE_git-http=y
 CONFIG_PACKAGE_cgi-io=y
-CONFIG_PACKAGE_frpc=y
 CONFIG_PACKAGE_kcptun-client=y
 CONFIG_PACKAGE_kcptun-config=y
 CONFIG_PACKAGE_microsocks=y
@@ -1093,24 +1096,29 @@ CONFIG_PACKAGE_shadowsocks-rust-ssserver=y
 CONFIG_PACKAGE_shadowsocksr-libev-ssr-check=y
 CONFIG_PACKAGE_shadowsocksr-libev-ssr-local=y
 CONFIG_PACKAGE_shadowsocksr-libev-ssr-redir=y
+CONFIG_PACKAGE_shadowsocksr-libev-ssr-server=y
 CONFIG_PACKAGE_trojan=y
 CONFIG_PACKAGE_tuic-client=y
 CONFIG_PACKAGE_uhttpd=y
 CONFIG_PACKAGE_uhttpd-mod-ubus=y
 CONFIG_PACKAGE_v2ray-plugin=y
 CONFIG_PACKAGE_6in4=y
+CONFIG_PACKAGE_appfilter=y
 CONFIG_PACKAGE_ethtool=y
 CONFIG_PACKAGE_hysteria=y
 CONFIG_PACKAGE_ipset=y
 CONFIG_PACKAGE_ipt2socks=y
 CONFIG_PACKAGE_libipset=y
-CONFIG_PACKAGE_nlbwmon=y
 CONFIG_PACKAGE_odhcp6c=y
 CONFIG_PACKAGE_odhcp6c_ext_cer_id=0
 CONFIG_PACKAGE_odhcpd-ipv6only=y
 CONFIG_PACKAGE_odhcpd_ipv6only_ext_cer_id=0
 CONFIG_PACKAGE_ppp=y
 CONFIG_PACKAGE_ppp-mod-pppoe=y
+CONFIG_PACKAGE_rpcbind=y
+CONFIG_RPCBIND_LIBWRAP=y
+CONFIG_RPCBIND_RMTCALLS=y
+CONFIG_PACKAGE_simple-obfs-client=y
 CONFIG_PACKAGE_tcping=y
 CONFIG_PACKAGE_uclient-fetch=y
 CONFIG_PACKAGE_xray-core=y
@@ -1129,6 +1137,8 @@ CONFIG_PACKAGE_e2fsprogs=y
 CONFIG_PACKAGE_fuse-utils=y
 CONFIG_PACKAGE_fuse3-utils=y
 CONFIG_PACKAGE_mkf2fs=y
+CONFIG_PACKAGE_nfs-utils=y
+CONFIG_PACKAGE_nfs-utils-libs=y
 CONFIG_PACKAGE_ntfs3-mount=y
 CONFIG_PACKAGE_sysfsutils=y
 CONFIG_PACKAGE_fish=y
@@ -1136,11 +1146,13 @@ CONFIG_PACKAGE_zsh=y
 CONFIG_PACKAGE_tmux=y
 CONFIG_PACKAGE_coreutils=y
 CONFIG_PACKAGE_coreutils-base64=y
+CONFIG_PACKAGE_coreutils-fold=y
 CONFIG_PACKAGE_jshn=y
 CONFIG_PACKAGE_libjson-script=y
 CONFIG_PACKAGE_lm-sensors=y
+CONFIG_PACKAGE_mount-utils=y
 CONFIG_PACKAGE_openssl-util=y
 CONFIG_PACKAGE_shellsync=y
 CONFIG_PACKAGE_smartmontools=y
 CONFIG_STRACE_NONE=y
-CONFIG_OVERRIDE_PKGS="chinadns-ng dns2socks dns2tcp gn hysteria ipt2socks lua-maxminddb lua-neturl luci-app-argon-config luci-app-filebrowser luci-app-netdata luci-app-ssr-mudb-server luci-app-ssr-plus luci-theme-argon microsocks mosdns naiveproxy open-app-filter redsocks2 shadowsocks-rust shadowsocksr-libev simple-obfs tcping trojan tuic-client v2ray-core v2ray-geodata v2ray-plugin v2raya xray-core xray-plugin"
+CONFIG_OVERRIDE_PKGS="chinadns-ng dns2socks dns2tcp gn hysteria ipt2socks lua-maxminddb lua-neturl luci-app-argon-config luci-app-filebrowser luci-app-ssr-mudb-server luci-app-ssr-plus microsocks mosdns naiveproxy open-app-filter redsocks2 shadowsocks-rust shadowsocksr-libev simple-obfs tcping trojan tuic-client v2ray-core v2ray-geodata v2ray-plugin v2raya xray-core xray-plugin"
