--- a/.github/workflows/immortalwrt-23.05.yml
+++ b/.github/workflows/immortalwrt-23.05.yml
@@ -2,8 +2,6 @@ name: ImmortalWrt-23.05
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: 0 19 * * 3
 
 env:
   REPO_URL: https://github.com/immortalwrt/immortalwrt.git
@@ -46,6 +44,7 @@ jobs:
         sudo -E apt-get -y purge azure-cli ghc* zulu* llvm* firefox google* dotnet* powershell openjdk* mongodb* moby* || true
         sudo -E apt-get -y update
         sudo -E apt-get -y install $(curl -fsSL is.gd/depends_ubuntu_2204)
+        sudo -E apt-get -y install clang clang++
         sudo -E systemctl daemon-reload
         sudo -E apt-get -y autoremove --purge
         sudo -E apt-get -y clean
