取消自动编译

--- a/.github/workflows/immortalwrt-21.02.yml
+++ b/.github/workflows/immortalwrt-21.02.yml
@@ -2,8 +2,8 @@ name: ImmortalWrt-21.02
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: 0 19 * * 1
+#  schedule:
+#    - cron: 0 19 * * 1
 
 env:
   REPO_URL: https://github.com/immortalwrt/immortalwrt.git
