--- a/.github/workflows/immortalwrt-23.05.yml
+++ b/.github/workflows/immortalwrt-23.05.yml
@@ -44,9 +44,8 @@ jobs:
         sudo -E apt-get -y purge azure-cli ghc* zulu* llvm* firefox google* dotnet* powershell openjdk* mongodb* moby* || true
         sudo -E apt-get -y update
         sudo -E apt-get -y install $(curl -fsSL is.gd/depends_ubuntu_2204)
-        #        sudo -E apt-get -y install clang lld
-        #export PATH="/usr/bin/clang++:$PATH"
-        sudo -E bash -c 'bash <(curl -s https://build-scripts.immortalwrt.eu.org/init_build_environment.sh)'
+        sudo -E apt-get -y install clang lld
+        export PATH="/usr/bin/clang++:$PATH"
         sudo -E systemctl daemon-reload
         sudo -E apt-get -y autoremove --purge
         sudo -E apt-get -y clean
