--- a/.github/workflows/immortalwrt-master.yml
+++ b/.github/workflows/immortalwrt-master.yml
@@ -44,7 +44,7 @@ jobs:
         sudo -E apt-get -y purge azure-cli ghc* zulu* llvm* firefox google* dotnet* powershell openjdk* mongodb* moby* || true
         sudo -E apt-get -y update
         sudo -E apt-get -y install $(curl -fsSL is.gd/depends_ubuntu_2204)
-        sudo -E apt-get -y install clang lld
+        sudo -E apt-get -y install clang lld libpcre3 libpcre3-dev
         export PATH="/usr/bin/clang++:$PATH"
         sudo -E systemctl daemon-reload
         sudo -E apt-get -y autoremove --purge
