--- a/.github/workflows/immortalwrt-master.yml
+++ b/.github/workflows/immortalwrt-master.yml
@@ -7,7 +7,7 @@ env:
   REPO_URL: https://github.com/immortalwrt/immortalwrt.git
   REPO_BRANCH: master
   CONFIG_FILE: configs/iw-master.config
-  DIY_SCRIPT: diy-iwm.sh
+  DIY_SCRIPT: diy-iw23.sh
   CLASH_KERNEL: amd64
   CACHE_TOOLCHAIN: true
   UPLOAD_BIN_DIR: false
