--- a/configs/iw-master.config
+++ b/configs/iw-master.config
@@ -1126,4 +1126,4 @@ CONFIG_PACKAGE_smartmontools=y
 CONFIG_STRACE_NONE=y
 CONFIG_PACKAGE_ucode-mod-html=y
 CONFIG_PACKAGE_ucode-mod-lua=y
-CONFIG_OVERRIDE_PKGS="chinadns-ng dns2socks dns2tcp gn hysteria ipt2socks lua-maxminddb lua-neturl luci-app-argon-config luci-app-frpc luci-theme-argon microsocks mosdns naiveproxy redsocks2 shadowsocks-rust shadowsocksr-libev simple-obfs tcping trojan tuic-client v2ray-core v2ray-plugin v2raya xray-core xray-plugin"
+CONFIG_OVERRIDE_PKGS="chinadns-ng dns2socks dns2tcp gn hysteria ipt2socks lua-maxminddb lua-neturl luci-app-argon-config luci-app-frpc luci-theme-argon microsocks mosdns naiveproxy redsocks2  tcping trojan tuic-client v2ray-core v2ray-plugin v2raya xray-core xray-plugin"
