修改24.10配置-添加细节

--- a/configs/iw-24.config
+++ b/configs/iw-24.config
@@ -103,10 +103,16 @@ CONFIG_x86_64=y
 CONFIG_ARCH="x86_64"
 CONFIG_EXTERNAL_CPIO=""
 CONFIG_TARGET_ROOTFS_TARGZ=y
+CONFIG_TARGET_ROOTFS_EXT4FS=y
+CONFIG_TARGET_EXT4_RESERVED_PCT=0
+CONFIG_TARGET_EXT4_BLOCKSIZE_4K=y
+CONFIG_TARGET_EXT4_BLOCKSIZE=4096
+CONFIG_TARGET_EXT4_JOURNAL=y
 CONFIG_TARGET_ROOTFS_SQUASHFS=y
 CONFIG_TARGET_SQUASHFS_BLOCK_SIZE=256
 CONFIG_TARGET_UBIFS_FREE_SPACE_FIXUP=y
 CONFIG_TARGET_UBIFS_JOURNAL_SIZE=""
+CONFIG_GRUB_IMAGES=y
 CONFIG_GRUB_EFI_IMAGES=y
 CONFIG_GRUB_CONSOLE=y
 CONFIG_GRUB_BAUDRATE=115200
@@ -644,8 +650,10 @@ CONFIG_PACKAGE_libiwinfo-data=y
 CONFIG_PACKAGE_bnx2-firmware=y
 CONFIG_PACKAGE_i915-firmware-dmc=y
 CONFIG_PACKAGE_kmod-scsi-core=y
+CONFIG_PACKAGE_kmod-crypto-acompress=y
 CONFIG_PACKAGE_kmod-crypto-aead=y
 CONFIG_PACKAGE_kmod-crypto-arc4=y
+CONFIG_PACKAGE_kmod-crypto-blake2b=y
 CONFIG_PACKAGE_kmod-crypto-ccm=y
 CONFIG_PACKAGE_kmod-crypto-cmac=y
 CONFIG_PACKAGE_kmod-crypto-crc32=y
@@ -669,6 +677,8 @@ CONFIG_PACKAGE_kmod-crypto-sha256=y
 CONFIG_PACKAGE_kmod-crypto-sha3=y
 CONFIG_PACKAGE_kmod-crypto-sha512=y
 CONFIG_PACKAGE_kmod-crypto-user=y
+CONFIG_PACKAGE_kmod-crypto-xxhash=y
+CONFIG_PACKAGE_kmod-fs-btrfs=y
 CONFIG_PACKAGE_kmod-fs-cifs=y
 CONFIG_PACKAGE_kmod-fs-exfat=y
 CONFIG_PACKAGE_kmod-fs-ext4=y
@@ -690,7 +700,14 @@ CONFIG_PACKAGE_kmod-asn1-decoder=y
 CONFIG_PACKAGE_kmod-lib-crc-ccitt=y
 CONFIG_PACKAGE_kmod-lib-crc16=y
 CONFIG_PACKAGE_kmod-lib-crc32c=y
+CONFIG_PACKAGE_kmod-lib-lzo=y
+CONFIG_PACKAGE_kmod-lib-raid6=y
 CONFIG_PACKAGE_kmod-lib-textsearch=y
+CONFIG_PACKAGE_kmod-lib-xor=y
+CONFIG_PACKAGE_kmod-lib-xxhash=y
+CONFIG_PACKAGE_kmod-lib-zlib-deflate=y
+CONFIG_PACKAGE_kmod-lib-zlib-inflate=y
+CONFIG_PACKAGE_kmod-lib-zstd=y
 CONFIG_PACKAGE_kmod-oid-registry=y
 CONFIG_PACKAGE_kmod-nls-base=y
 CONFIG_PACKAGE_kmod-nls-cp437=y
@@ -827,6 +844,7 @@ CONFIG_WOLFSSL_HAS_WPAS=y
 CONFIG_WOLFSSL_HAS_ECC25519=y
 CONFIG_WOLFSSL_HAS_OPENVPN=y
 CONFIG_WOLFSSL_ALT_NAMES=y
+CONFIG_PACKAGE_bind-libs=y
 CONFIG_PACKAGE_glib2=y
 CONFIG_PACKAGE_jansson=y
 CONFIG_PACKAGE_libblkid=y
@@ -867,6 +885,7 @@ CONFIG_PACKAGE_liblua=y
 CONFIG_PACKAGE_liblucihttp=y
 CONFIG_PACKAGE_liblucihttp-lua=y
 CONFIG_PACKAGE_liblucihttp-ucode=y
+CONFIG_PACKAGE_liblzo=y
 CONFIG_PACKAGE_libminiupnpc=y
 CONFIG_PACKAGE_libmnl=y
 CONFIG_PACKAGE_libmount=y
@@ -881,6 +900,7 @@ CONFIG_PACKAGE_libnl-core=y
 CONFIG_PACKAGE_libnl-genl=y
 CONFIG_PACKAGE_libnl-tiny=y
 CONFIG_PACKAGE_libogg=y
+CONFIG_PACKAGE_libparted=y
 CONFIG_PACKAGE_libpcre2=y
 CONFIG_PCRE2_JIT_ENABLED=y
 CONFIG_PACKAGE_libpcre2-32=y
@@ -898,8 +918,10 @@ CONFIG_PACKAGE_libuci=y
 CONFIG_PACKAGE_libuclient=y
 CONFIG_PACKAGE_libucode=y
 CONFIG_PACKAGE_libudebug=y
+CONFIG_PACKAGE_liburcu=y
 CONFIG_PACKAGE_libustream-openssl=y
 CONFIG_PACKAGE_libuuid=y
+CONFIG_PACKAGE_libuv=y
 CONFIG_PACKAGE_libvorbis=y
 CONFIG_PACKAGE_rpcd-mod-luci=y
 CONFIG_PACKAGE_rpcd-mod-rrdns=y
@@ -922,10 +944,13 @@ CONFIG_PACKAGE_luci-app-aria2=y
 CONFIG_PACKAGE_luci-app-cifs-mount=y
 CONFIG_PACKAGE_luci-app-cloudflared=y
 CONFIG_PACKAGE_luci-app-ddns=y
-CONFIG_PACKAGE_luci-app-ddns-go=y
+CONFIG_PACKAGE_luci-app-diskman=y
 CONFIG_PACKAGE_luci-app-diskman_INCLUDE_btrfs_progs=y
 CONFIG_PACKAGE_luci-app-diskman_INCLUDE_lsblk=y
+CONFIG_PACKAGE_luci-app-filemanager=y
 CONFIG_PACKAGE_luci-app-firewall=y
+CONFIG_PACKAGE_luci-app-frpc=y
+CONFIG_PACKAGE_luci-app-frps=y
 CONFIG_PACKAGE_luci-app-homeproxy=y
 CONFIG_PACKAGE_luci-app-ksmbd=y
 CONFIG_PACKAGE_luci-app-minidlna=y
@@ -967,9 +992,13 @@ CONFIG_PACKAGE_luci-i18n-aria2-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-base-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-cifs-mount-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-cloudflared-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-ddns-go-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-ddns-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-diskman-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-filemanager-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-firewall-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-frpc-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-frps-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-homeproxy-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-homrproxy-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-ksmbd-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-minidlna-zh-cn=y
@@ -1005,6 +1034,7 @@ CONFIG_PACKAGE_sshfs=y
 CONFIG_PACKAGE_miniupnpd-nftables=y
 CONFIG_PACKAGE_nftables-json=y
 CONFIG_PACKAGE_bind-dig=y
+CONFIG_BIND_ENABLE_DOH=y
 CONFIG_PACKAGE_chinadns-ng=y
 CONFIG_PACKAGE_ddns-go=y
 CONFIG_PACKAGE_ddns-scripts=y
@@ -1025,6 +1055,7 @@ CONFIG_PACKAGE_git-http=y
 CONFIG_PACKAGE_cgi-io=y
 CONFIG_PACKAGE_cloudflared=y
 CONFIG_PACKAGE_frpc=y
+CONFIG_PACKAGE_frps=y
 CONFIG_PACKAGE_sing-box=y
 CONFIG_SING_BOX_BUILD_ACME=y
 CONFIG_SING_BOX_BUILD_CLASH_API=y
@@ -1038,7 +1069,7 @@ CONFIG_PACKAGE_uhttpd=y
 CONFIG_PACKAGE_uhttpd-mod-ubus=y
 CONFIG_PACKAGE_acme=y
 CONFIG_PACKAGE_acme-acmesh=y
-CONFIG_PACKAGE_acme-acmesh-dnsapi
+CONFIG_PACKAGE_acme-acmesh-dnsapi=y
 CONFIG_PACKAGE_acme-common=y
 CONFIG_PACKAGE_ethtool=y
 CONFIG_PACKAGE_iputils-arping=y
@@ -1051,10 +1082,14 @@ CONFIG_PACKAGE_ppp-mod-pppoe=y
 CONFIG_PACKAGE_socat=y
 CONFIG_PACKAGE_uclient-fetch=y
 CONFIG_PACKAGE_grub2-bios-setup=y
+CONFIG_PACKAGE_blkid=y
 CONFIG_PACKAGE_fdisk=y
 CONFIG_PACKAGE_lsblk=y
+CONFIG_PACKAGE_parted=y
+CONFIG_PARTED_READLINE=y
 CONFIG_PACKAGE_partx-utils=y
 CONFIG_PACKAGE_vim-fuller=y
+CONFIG_PACKAGE_btrfs-progs=y
 CONFIG_PACKAGE_e2fsprogs=y
 CONFIG_PACKAGE_fuse3-utils=y
 CONFIG_PACKAGE_mkf2fs=y
@@ -1074,3 +1109,4 @@ CONFIG_PACKAGE_smartmontools-drivedb=y
 CONFIG_STRACE_NONE=y
 CONFIG_PACKAGE_ucode-mod-html=y
 CONFIG_PACKAGE_ucode-mod-lua=y
+CONFIG_OVERRIDE_PKGS="luci-app-frpc"
